--- a/views/urlap.ejs
+++ b/views/urlap.ejs
@@ -7,18 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="container">
-    <h1 class="text-center pt-5">Szállás foglalás</h1>
+    <h1 class="text-center py-5 bg-light border rounded-pill mx-auto ">Szállás foglalás</h1>
     <form action="/foglalas" method="post" class="form-group">
         <label for="nev" class="form-label">Név: </label>
-        <input type="text" name="nev" class="form-control" value="<%foglalas.nev%>">
+        <input type="text" name="nev" required class="form-control" value="<%=data.nev%>">
         <label for="email" class="form-label">Email: </label>
-        <input type="email" name="email" required class="form-control" value="<%foglalas.email%>">
+        <input type="email" name="email" required class="form-control" value="<%=data.email%>">
         <label for="datum">Dátum: </label>
-        <input type="date" name="datum" required class="form-control" value="<%foglalas.datum%>">
+        <input type="date" name="datum" required class="form-control" value="<%=data.datum%>">
         <label for="ido">Idő: </label>
-        <input type="time" name="ido" required class="form-control" value="<%foglalas.ido%>">
+        <input type="time" name="ido" required class="form-control" value="<%=data.ido%>">
         <label for="vendegszam">Vendégek száma: </label>
-        <input type="number" name="vendegszam" min="1" max="10" required class="form-control" value="<%foglalas.vendegszam%>"><br>
+        <input type="number" name="vendegszam" min="1" max="10"  class="form-control" value="<%=data.vendegszam%>"><br>
         <%errors.forEach(error => {%>
           <div class="alert alert-danger" role="alert"><%=error%></div>  
         <%});%>
